--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,16 @@
+@misc{domoticaWiki,
+  author = {{Wikipedia contributors}},
+  title = {Domotica},
+  year = {2024},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://it.wikipedia.org/wiki/Domotica}
+}
+@misc{miraiBotnet,
+  author = {Antonakakis, M. and April, T. and Bailey, M. et al.},
+  title = {Understanding the Mirai Botnet},
+  year = {2017},
+  url = {https://www.usenix.org/conference/usenixsecurity17/technical-sessions/presentation/antonakakis}
+}
 @misc{ConnectivityStandardsAlliance2023,
   author = {{Connectivity Standards Alliance}},
   title = {Matter Specification Version 1.0},
