--- a/capitoli/cap2.tex
+++ b/capitoli/cap2.tex
@@ -4,16 +4,17 @@
 La domotica residenziale indica l'integrazione delle tecnologie elettroniche e informatiche per automatizzare, controllare e ottimizzare gli impianti e i dispositivi presenti nelle abitazioni. Questo campo applicativo sfrutta in maniera determinante l'Internet of Things (IoT), consentendo agli utenti un controllo sia locale che remoto degli ambienti domestici \parencite{domoticaWiki}. I principi fondamentali della domotica comprendono automazione, integrazione, personalizzazione e interoperabilità, aspetti che sono cruciali per il funzionamento efficace di un sistema intelligente.
 
 \section{Vantaggi della domotica: efficienza energetica, sicurezza e comfort abitativo}
-L'impiego della domotica in contesti residenziali porta numerosi vantaggi, tra cui spiccano l'efficienza energetica, l'aumento della sicurezza e il miglioramento del comfort abitativo. Sistemi intelligenti avanzati permettono, ad esempio, di ottimizzare automaticamente l'illuminazione e la climatizzazione sulla base di parametri ambientali e comportamenti abituali degli utenti, riducendo così significativamente i consumi energetici \parencite{iecSmartHome}. Sul fronte della sicurezza, sensori intelligenti e telecamere integrate consentono una sorveglianza continua, intervenendo autonomamente in caso di emergenze o situazioni anomale \parencite{nistIoTSecurity}. Il comfort è garantito da interfacce intuitive, quali app per dispositivi mobili e assistenti vocali, che rendono semplice e immediata la gestione personalizzata degli ambienti domestici.
+La domotica porta diversi benefici concreti nelle nostre case. I sistemi intelligenti possono infatti ottimizzare automaticamente luci e riscaldamento in base alle nostre abitudini e alle condizioni ambientali, permettendoci di risparmiare energia senza dover pensare ogni volta a spegnere o regolare tutto manualmente.
+Per quanto riguarda la sicurezza, i sensori e le telecamere smart ci permettono di tenere sotto controllo la casa anche quando siamo fuori, notificandoci quando un evento particolare viene rivelato. inoltre tutto questo si gestisce facilmente dai moderni smartphone, rendendo davvero intuitiva e semplice la personalizzazione di ogni aspetto della casa secondo le nostre preferenze.
 
 \section{Componenti principali di un sistema domotico}
-Un sistema domotico completo ed efficace è composto da diversi elementi essenziali che interagiscono costantemente tra loro \parencite{iecSmartHome}:
+Un sistema domotico completo si caratterizza per la presenza di molteplici componenti fondamentali che operano in modalità integrata attraverso processi di comunicazione continua:
 \begin{itemize}
     \item \textbf{Sensori intelligenti}: dispositivi in grado di rilevare parametri ambientali (temperatura, umidità, luminosità, movimento), fornendo dati essenziali per le automazioni;
     \item \textbf{Attuatori}: dispositivi che trasformano i comandi ricevuti in azioni concrete, come l'accensione o lo spegnimento di luci, regolazione di tapparelle o riscaldamento;
     \item \textbf{Unità centrale di controllo (hub o gateway)}: componente centrale del sistema che gestisce le regole di automazione, interpreta i dati dei sensori e coordina gli attuatori;
     \item \textbf{Interfacce utente}: comprendono applicazioni mobili, assistenti vocali o pannelli di controllo fisici, permettendo agli utenti di interagire facilmente con il sistema;
-    \item \textbf{Rete di comunicazione}: infrastruttura di rete che collega i dispositivi domotici, solitamente basata su protocolli cablati (es. KNX) o wireless (es. Wi-Fi, Zigbee, Thread o Matter).
+    \item \textbf{Rete di comunicazione}: infrastruttura di rete che collega i dispositivi domotici, solitamente basata su protocolli cablati o wireless.
 \end{itemize}
 
 \section{Sfide aperte nella domotica residenziale}
