--- a/capitoli/cap3.tex
+++ b/capitoli/cap3.tex
@@ -1,50 +1,50 @@
 \chapter{Evoluzione dei Protocolli di Comunicazione IoT}
 
 \section{Introduzione ai protocolli IoT}
-I protocolli di comunicazione IoT sono il vero e proprio "linguaggio" che permette ai dispositivi intelligenti di casa nostra di parlarsi e collaborare. Pensate a quando accendete la luce dal vostro smartphone o regolate il termostato senza alzarvi dal divano: tutto questo è possibile grazie a protocolli che gestiscono la comunicazione tra dispositivi diversi, spesso di marche e tecnologie differenti. Nel tempo, questi protocolli si sono evoluti per rispondere a nuove esigenze, come consumi energetici più bassi, maggiore sicurezza e facilità d’uso. Possiamo dividerli in due grandi famiglie: quelli cablati, come KNX e RS-485, e quelli wireless, come Zigbee, Z-Wave, Wi-Fi, Bluetooth Low Energy, Thread e Matter.
+I protocolli di comunicazione IoT sono il vero e proprio "linguaggio" che permette ai dispositivi intelligenti di casa nostra di parlarsi e collaborare. Pensate a quando accendete la luce dal vostro smartphone o regolate il termostato prima di arrivare a casa, tutto questo è possibile grazie a protocolli che gestiscono la comunicazione tra dispositivi diversi, spesso di marche e tecnologie differenti. 
+Nel tempo, questi protocolli si sono evoluti per rispondere a nuove esigenze, come consumi energetici più bassi, maggiore sicurezza e facilità d’uso. 
+I protocollik possono essere divisi in due grandi famiglie: quelli cablati, come KNX e RS-485, e quelli wireless, come Zigbee, Z-Wave, Wi-Fi, Bluetooth Low Energy, Thread e Matter.
 
 \section{Protocolli cablati: KNX e RS-485}
-I protocolli cablati sono stati i pionieri della domotica e ancora oggi sono molto usati, soprattutto in contesti dove la stabilità della comunicazione è fondamentale.
+I protocolli cablati sono stati i pionieri della domotica e ancora oggi sono molto usati, soprattutto in contesti dove la stabilità della comunicazione è fondamentale.\\
 
-\textbf{KNX} è uno standard internazionale molto affidabile e flessibile. Immaginate un grande edificio, come un hotel o un ufficio, dove luci, riscaldamento, tende e sistemi di sicurezza devono funzionare in modo coordinato e senza intoppi. KNX permette di collegare tutti questi dispositivi con un unico sistema cablato, garantendo che tutto funzioni senza problemi. Il vantaggio principale per l’utente è la grande affidabilità e la possibilità di personalizzare il sistema in base alle esigenze specifiche. Tuttavia, l’installazione richiede un intervento tecnico specializzato e può risultare costosa, il che lo rende meno adatto per case più piccole o soluzioni fai-da-te.
+\textbf{KNX} è uno standard internazionale molto affidabile e flessibile. Immaginate un grande edificio, come un hotel o un ufficio, dove luci, riscaldamento, tende e sistemi di sicurezza devono funzionare in modo coordinato e senza intoppi. KNX permette di collegare tutti questi dispositivi con un unico sistema cablato, garantendo che tutto funzioni senza problemi. 
+Il vantaggio principale nel suo utilizzo è la grande affidabilità e la possibilità di personalizzare il sistema in base alle esigenze specifiche in fase di progettazione. Tuttavia, l’installazione richiede un intervento tecnico specializzato e può risultare costosa, il che lo rende meno adatto per case più piccole, inoltre successive modifiche o ampliamenti non previsti richiedono nuovi lavori sull'infrastruttura della casa.\\
 
-\textbf{RS-485}, invece, è spesso usato in contesti industriali o in impianti domestici più semplici. Per esempio, in un’abitazione con un sistema di allarme o controllo accessi, RS-485 può garantire una comunicazione stabile anche su lunghe distanze e in ambienti con molte interferenze elettriche. Dal punto di vista dell’utente, questo si traduce in un sistema robusto che raramente perde il segnale. Tuttavia, come KNX, richiede cablaggi e competenze tecniche per l’installazione.
+\textbf{RS-485}, invece, è spesso usato in contesti industriali o in impianti domestici più semplici per risolvere specifici problemi, come ad esempio un sistema di allarme o controllo degli accessi. 
+RS-485 può garantire una comunicazione stabile anche su lunghe distanze e in ambienti con molte interferenze elettriche, questo si traduce in un sistema robusto che raramente perde il segnale. Tuttavia, come KNX, richiede cablaggi e competenze tecniche per l’installazione, inoltre ache in questo caso sono onerosi i successivi ampliamenti e modifiche se non previste nella prima fase di progettazione.
 
 \section{Protocolli wireless: Zigbee, Z-Wave, Wi-Fi e Bluetooth Low Energy}
-Con l’avvento delle tecnologie wireless, la domotica è diventata più accessibile e flessibile, permettendo installazioni più semplici e meno invasive.
+Con l’avvento delle tecnologie wireless, la domotica è diventata più accessibile e flessibile, permettendo installazioni più semplici e meno invasive.\\
 
-\textbf{Zigbee} è molto popolare per dispositivi come sensori di movimento, termostati smart e lampadine intelligenti. Ad esempio, in una casa, i sensori Zigbee possono comunicare tra loro formando una rete mesh: se un dispositivo è lontano dal router, il segnale passa attraverso altri dispositivi fino a raggiungerlo. Questo significa che anche in case grandi o con muri spessi, la comunicazione resta stabile. Gli utenti apprezzano il basso consumo energetico, che permette ai sensori di durare anni con una singola batteria. Lo svantaggio può essere la necessità di un hub centrale e qualche difficoltà iniziale nella configurazione.
+\textbf{Zigbee} è molto popolare per dispositivi come sensori di movimento, termostati smart e lampadine intelligenti. Ad esempio, in una casa, i sensori Zigbee possono comunicare tra loro formando una rete mesh,  se un dispositivo è lontano dal router il segnale passa attraverso altri dispositivi fino a raggiungerlo. Questa tecnica permette di poter installare anche in case di grandi dimensioni o con muri spessi che schermerebbero il segnale, diversi dispositivi.
+Un vantaggio è che la comunicazione tra i dispositivi e l'hub centrale resta stabile, a questo si aggiunge il basso consumo energetico, che permette ai sensori di durare anni con una singola batteria. 
+Lo svantaggio è la necessità di un hub centrale per ogni marca di dispositivi e la difficoltà nella configurazione e nei successivi momenti di aggiornamento del firmware dei singoli dispositivi.\\
 
-\textbf{Z-Wave} è simile a Zigbee ma spesso preferito in ambito residenziale per la sua semplicità. Molti utenti lo trovano intuitivo per collegare dispositivi come serrature smart o controller per tapparelle. La sicurezza integrata è un punto forte, così come la compatibilità tra marche diverse. Tuttavia, la velocità di trasmissione è limitata rispetto al Wi-Fi, il che lo rende meno adatto a trasmettere grandi quantità di dati.
+\textbf{Z-Wave} è simile a Zigbee ma spesso preferito in ambito residenziale per la sua semplicità di configurazione iniziale, i wizard di installazione e configurazione sono intuitivi e permettono di collegare dispositivi come serrature smart o controller per tapparelle. 
+Un'ulteriore caratteristica è la sicurezza integrata, così come la compatibilità tra marche diverse, tuttavia, la velocità di trasmissione è limitata rispetto al Wi-Fi, il che lo rende meno adatto a trasmettere grandi quantità di dati.\\
 
-\textbf{Wi-Fi} è probabilmente il protocollo più familiare, essendo quello usato per connettere smartphone, computer e smart TV a internet. Molti dispositivi IoT, come videocamere di sicurezza o assistenti vocali, usano il Wi-Fi perché garantisce alta velocità e non richiede hub aggiuntivi. L’utente comune apprezza la facilità d’uso, ma spesso si scontra con l’alto consumo energetico, che limita l’uso di Wi-Fi in dispositivi alimentati a batteria, e con problemi di congestione della rete domestica.
+\textbf{Wi-Fi} è probabilmente il protocollo più familiare, essendo quello usato per connettere smartphone, computer e smart TV a internet, molti dispositivi IoT, come videocamere di sicurezza o assistenti vocali, usano il Wi-Fi perché garantisce alta velocità e non richiede hub aggiuntivi. 
+Lo svantaggio principale sta nell’alto consumo energetico, che limita l’uso di Wi-Fi in dispositivi alimentati a batteria, altre problematiche riguradano la sicurezza di questi dispositivi e la congestione della rete wi-fi domestica.\\
 
-\textbf{Bluetooth Low Energy (BLE)} è ideale per dispositivi a corto raggio e a bassissimo consumo, come smartwatch, fitness tracker o sensori di prossimità. Per esempio, potete usare BLE per sbloccare la porta di casa automaticamente quando vi avvicinate con il telefono. Il vantaggio è il risparmio energetico e la semplicità, ma la portata limitata lo rende inadatto per coprire tutta la casa senza dispositivi aggiuntivi.
-
+\textbf{Bluetooth Low Energy (BLE)} è ideale per dispositivi a corto raggio e a bassissimo consumo, come smartwatch, fitness tracker o sensori di prossimità. Un utilizzo molto comune di questo protocolo è per sbloccare la porta  o accessi quando si avvicina uno smartphone od un Tag BLE. Il vantaggio è il risparmio energetico e la semplicità, ma la portata limitata lo rende inadatto per coprire tutta la casa senza dispositivi aggiuntivi.
 \section{Thread e Matter: verso l'interoperabilità e l'unificazione}
-Gli utenti di domotica spesso si trovano frustrati perché dispositivi di marche diverse non “parlano” tra loro facilmente. Thread e Matter sono protocolli pensati per risolvere questo problema.
+Chi si avvicina alla domotica spesso scopre con disappunto che i dispositivi di marche diverse faticano a comunicare tra loro. È frustrante comprare una lampadina smart di un brand e scoprire che non funziona con l'hub di un altro. Thread e Matter sono protocolli nati proprio per risolvere questa babele tecnologica.\\
 
-\textbf{Thread} è una rete mesh basata su IPv6 che permette ai dispositivi di comunicare direttamente tra loro senza passare per un hub centrale. Immaginate di avere luci, sensori e termostati che si connettono in modo autonomo e stabile, anche se un dispositivo si spegne o perde la connessione: la rete si auto-ripara. Gli utenti notano una maggiore affidabilità e una configurazione più semplice rispetto a Zigbee o Z-Wave. Come svantaggio, è ancora relativamente nuovo e non tutti i dispositivi lo supportano.
+\textbf{Thread} è una rete mesh basata su IPv6 che permette ai dispositivi di comunicare direttamente tra loro senza passare per un hub centrale. In pratica, le luci, i sensori e i termostati si collegano tra loro creando una ragnatela di connessioni: se una lampadina si spegne o perde il segnale, gli altri dispositivi trovano automaticamente percorsi alternativi per comunicare. Il risultato? Una rete che si auto-ripara e funziona con maggiore stabilità rispetto a tecnologie precedenti come Zigbee o Z-Wave. La configurazione è generalmente più semplice e immediata. Il rovescio della medaglia è che Thread è ancora una tecnologia giovane e non tutti i prodotti sul mercato la supportano ancora.\\
 
-\textbf{Matter} è il progetto più ambizioso, nato per creare un linguaggio comune per tutti i dispositivi smart, indipendentemente dal produttore. Se avete mai avuto difficoltà a far dialogare un dispositivo Amazon Alexa con uno Google Home, Matter promette di risolvere questo problema. Grazie a Matter, sarà possibile integrare facilmente nuovi dispositivi nel proprio ecosistema domestico senza preoccuparsi della compatibilità. Per gli utenti, questo significa meno stress e più libertà di scelta. Al momento, però, l’adozione è in crescita e non tutti i prodotti sul mercato lo supportano ancora.
+\textbf{Matter} rappresenta l'iniziativa più ambiziosa nel settore della domotica, concepita per stabilire un protocollo di comunicazione universale tra dispositivi intelligenti di differenti produttori. Questo standard si propone di risolvere le problematiche di interoperabilità che caratterizzano l'attuale panorama della smart home, dove dispositivi appartenenti a ecosistemi diversi presentano significative limitazioni nell'integrazione reciproca. L'implementazione di Matter consente ai dispositivi certificati di operare trasversalmente su piattaforme multiple, includendo i principali ecosistemi commerciali, tale standardizzazione favorisce una maggiore flessibilità nella composizione dei sistemi domotici, permettendo scelte basate su criteri qualitativi e funzionali piuttosto che su vincoli di compatibilità.
+
+Nonostante le promettenti prospettive, l'adozione del protocollo si trova ancora in fase di espansione, con una progressiva ma non ancora completa diffusione nel mercato. È importante sottolineare che il protocollo Matter non consente l'integrazione di qualsiasi tipologia di dispositivo, ma definisce specifiche categorie supportate attraverso le proprie direttive tecniche. Questo approccio selettivo garantisce l'affidabilità e la coerenza dell'ecosistema, limitando tuttavia l'universalità inizialmente prospettata.
 
 \section{Criteri di selezione dei protocolli}
-Quando scegliete un protocollo per la vostra casa intelligente, dovete considerare diversi aspetti pratici:
+Quando si deve scegliere un protocollo per la casa intelligente, bisogna considerare diversi aspetti pratici:
 \begin{itemize}
     \item \textbf{Consumo energetico}: Se avete dispositivi alimentati a batteria, come sensori o serrature, è fondamentale scegliere protocolli a basso consumo per evitare continui cambi di batteria.
     \item \textbf{Portata e copertura}: In case grandi o con muri spessi, protocolli con rete mesh come Zigbee, Thread o Z-Wave possono garantire una copertura migliore.
     \item \textbf{Velocità e latenza}: Per applicazioni che richiedono risposte immediate, come videocamere o sistemi di allarme, è meglio optare per protocolli veloci come Wi-Fi.
-    \item \textbf{Facilità d'uso e integrazione}: Se non siete esperti, è importante scegliere protocolli supportati da dispositivi facili da configurare e che funzionano bene insieme.
+    \item \textbf{Facilità d'uso e integrazione}: Per far funzionare insieme dispositivi di produttori diversi, è essenziale verificare che supportino gli stessi protocolli di comunicazione, preferendo standard aperti che facilitino la configurazione e garantiscano una reale interoperabilità.
     \item \textbf{Sicurezza e privacy}: Proteggere la propria rete domestica è fondamentale, quindi è bene preferire protocolli che offrono solide misure di sicurezza.
 \end{itemize}
 
 Nel prossimo capitolo approfondiremo proprio questi aspetti di sicurezza e privacy nei protocolli IoT domestici, fornendo consigli pratici per mantenere la vostra casa intelligente protetta e affidabile.
-
----
-
-\textbf{Nuovi termini introdotti da aggiornare nel glossario:}
-\begin{itemize}
-    \item \textbf{Rete mesh}: Una rete in cui ogni dispositivo si connette direttamente ad altri dispositivi vicini, migliorando copertura e affidabilità.
-    \item \textbf{IPv6}: La versione più recente del protocollo Internet, che consente un numero praticamente illimitato di indirizzi IP.
-    \item \textbf{Hub centrale}: Un dispositivo che funge da punto di controllo e coordinamento per altri dispositivi in una rete domotica.
-\end{itemize}
