--- a/glossario.tex
+++ b/glossario.tex
@@ -24,4 +24,6 @@
     \item[IDS] Sistema che monitora il traffico di rete per identificare e segnalare eventuali intrusioni o attività sospette non autorizzate.
     \item[Firmware] Software fondamentale, installato permanentemente sui dispositivi hardware per controllare direttamente le loro operazioni di base.
     \item[DTLS] Datagram Transport Layer Security --- Protocollo di sicurezza che fornisce comunicazioni cifrate per dispositivi con risorse limitate, basato su UDP.
+    \item[Tag] Dispositivo utilizzato per attivare automazioni domotiche. Può essere passivo (NFC/RFID, senza batteria, funziona al tocco) o attivo (BLE/beacon, con batteria, rileva la presenza a distanza).
+    \item[MFA] Multi-Factor Authentication – Metodo di autenticazione che richiede all’utente di fornire due o più prove (“fattori”) per verificare la propria identità prima di concedere l’accesso a un sistema o servizio
 \end{description}
