--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{lipsum}
 \setlength{\headheight}{27pt}
 \usepackage[backend=biber,style=authoryear]{biblatex}
+\setlength{\bibitemsep}{12pt}
 \usepackage{csquotes}
 
 % Pacchetti necessari
